# djangocms-text

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  aldryn_config.py  conftest.py  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  runtests.py  setup.py  testdb.sqlite  tiptap-extensions.md  tox.ini  webpack.config.js
.github/workflows/: codeql.yml  frontend.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
djangocms_text/: __init__.py  apps.py  attribute_parsers.py  cms_plugins.py  cms_toolbars.py  editors.py  fields.py  forms.py  html.py  models.py  sanitizer.py  settings.py  utils.py  widgets.py
djangocms_text/contrib/filer_image/: README.rst  __init__.py  apps.py  package.json  webpack.config.js
djangocms_text/contrib/filer_image/src/: extension.js  index.js  popup.js  toolbar.js
djangocms_text/contrib/filer_image/static/djangocms_text/tiptap_plugins/: cms.filer_image.js  cms.filer_image.js.map
djangocms_text/contrib/officepaste/: README.rst  __init__.py
djangocms_text/contrib/officepaste/static/djangocms_text/tiptap_plugins/: cms.officepaste.js
djangocms_text/contrib/text_ckeditor4/: __init__.py  apps.py
djangocms_text/contrib/text_ckeditor5/: __init__.py
djangocms_text/contrib/text_tinymce/: __init__.py
djangocms_text/contrib/text_tiptap/: __init__.py
djangocms_text/contrib/youtube/: README.rst  __init__.py
djangocms_text/locale/ar/LC_MESSAGES/: django.po
djangocms_text/locale/bn/LC_MESSAGES/: django.po
djangocms_text/locale/ca/LC_MESSAGES/: django.po
djangocms_text/locale/cs/LC_MESSAGES/: django.po
djangocms_text/locale/da/LC_MESSAGES/: django.po
djangocms_text/locale/de/LC_MESSAGES/: django.po
djangocms_text/locale/el/LC_MESSAGES/: django.po
djangocms_text/locale/en/LC_MESSAGES/: django.po
djangocms_text/locale/es/LC_MESSAGES/: django.po
djangocms_text/locale/et/LC_MESSAGES/: django.po
djangocms_text/locale/eu/LC_MESSAGES/: django.po
djangocms_text/locale/fa/LC_MESSAGES/: django.po
djangocms_text/locale/fi/LC_MESSAGES/: django.po
djangocms_text/locale/fr/LC_MESSAGES/: django.po
djangocms_text/locale/gl/LC_MESSAGES/: django.po
djangocms_text/locale/he/LC_MESSAGES/: django.po
djangocms_text/locale/hi/LC_MESSAGES/: django.po
djangocms_text/locale/hr/LC_MESSAGES/: django.po
djangocms_text/locale/hu/LC_MESSAGES/: django.po
djangocms_text/locale/is/LC_MESSAGES/: django.po
djangocms_text/locale/it/LC_MESSAGES/: django.po
djangocms_text/locale/ja/LC_MESSAGES/: django.po
djangocms_text/locale/lt/LC_MESSAGES/: django.po
djangocms_text/locale/nl/LC_MESSAGES/: django.po
djangocms_text/locale/no/LC_MESSAGES/: django.po
djangocms_text/locale/pl/LC_MESSAGES/: django.po
djangocms_text/locale/pt/LC_MESSAGES/: django.po
djangocms_text/locale/ro/LC_MESSAGES/: django.po
djangocms_text/locale/ru/LC_MESSAGES/: django.po
djangocms_text/locale/sv/LC_MESSAGES/: django.po
djangocms_text/locale/tr/LC_MESSAGES/: django.po
djangocms_text/locale/uk/LC_MESSAGES/: django.po
djangocms_text/locale/zh_CN/LC_MESSAGES/: django.po
djangocms_text/migrations/: 0001_initial.py  0002_text_json_text_rte.py  0003_auto_20240702_1409.py  0004_remove_old_ckeditor_table.py
djangocms_text/static/djangocms_text/bundles/: bundle.editor.min.js  bundle.editor.min.js.map  bundle.tiptap.min.js  bundle.tiptap.min.js.map
djangocms_text/static/djangocms_text/ckeditor/: config.js
djangocms_text/static/djangocms_text/ckeditor_plugins/cmsplugins/: plugin.js
djangocms_text/static/djangocms_text/css/: bundle.ckeditor4.min.css  bundle.tiptap.min.css  cms.ckeditor4.css  cms.normalize.css  cms.text.css  tiptap.admin.css
djangocms_text/static/djangocms_text/js/: ckeditor4.js  ckeditor4.js.map  editor.js.map
djangocms_text/static/djangocms_text_ckeditor/js/: cms.ckeditor.js
djangocms_text/templates/cms/plugins/: inline.html  render_plugin_preview.html  text_plugin_change_form.html  text_plugin_change_formx.html
djangocms_text/templates/cms/plugins/widgets/: ckeditor.html  editor.html
djangocms_text/templates/cms/toolbar/: config.html
djangocms_text/templatetags/: djangocms_text_tags.py
djangocms_text_ckeditor/: fields.py  utils.py  widgets.py
djangocms_text_ckeditor/static/djangocms_text_ckeditor/ckeditor_plugins/cmsplugins/: plugin.js
djangocms_text_ckeditor/static/djangocms_text_ckeditor/js/: cms.ckeditor.js
private/css/: cms.balloon-toolbar.css  cms.dialog.css  cms.linkfield.css  cms.reset.css  cms.tiptap.css  cms.toolbar.css
private/js/: cms.ckeditor4.js  cms.ckeditor5.js  cms.dialog.js  cms.editor.js  cms.linkfield.js  cms.quill.js  cms.texteditor.js  cms.tinymce.js  cms.tiptap.api.js  cms.tiptap.js  cms.tiptap.registry.js
private/js/ckeditor4_plugins/cmsplugins/: plugin.js
private/js/ckeditor5_plugins/: cms.plugin.js
private/js/ckeditor5_plugins/ckeditor5-cmsplugins/src/: cmsplugin.js  cmsplugincommand.js  cmspluginediting.js  cmspluginui.js  index.js
private/js/tiptap_extensions/: youtube.js
private/js/tiptap_plugins/: cms.balloon-toolbar.js  cms.dynlink.js  cms.formextension.js  cms.markdown.js  cms.plugin.js  cms.styles.js  cms.table.js  cms.tiptap.toolbar.js  cms.toolbar.js
tests/: base.py  fixtures.py  settings.py  test_apps.py  test_field.py  test_html.py  test_migrations.py  test_plugin.py  test_sanitizer.py  test_settings.py  test_widget.py  urls.py
tests/integration/: conftest.py  test_admin_editor.py  test_ckeditor4.py  test_markdown_paste.py  test_text_editor.py  test_text_plugin.py  utils.py
tests/js/: cms.dialog.test.js  cms.editor.test.js  cms.filer_image.test.js  cms.markdown.test.js  cms.officepaste.test.js  cms.plugin.test.js  cms.styles.test.js  cms.tiptap.registry.test.js  cms.tiptap.toolbar.test.js  cms.youtube.test.js  example.test.js  setup-tests.js
tests/requirements/: base.txt  dj42_cms311.txt  dj42_cms41.txt  dj50_cms41.txt  dj51_cms41.txt  dj52.txt  dj52_cms50.txt  dj52_cms51.txt  dj60_cms51.txt  dj_cms.txt
tests/test_app/: admin.py  cms_plugins.py  models.py
(+16 files in other folders)
